--- a/cpp/src/Freeze/msbuild/freeze/packages.config
+++ b/cpp/src/Freeze/msbuild/freeze/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="berkeley.db.v120" version="5.3.28.3" targetFramework="native" />
+  <package id="berkeley.db.v120" version="5.3.28.4" targetFramework="Native" />
   <package id="berkeley.db.v140" version="5.3.28.3" targetFramework="native" />
 </packages>
