--- a/cpp/src/FreezeScript/msbuild/dumpdb/packages.config
+++ b/cpp/src/FreezeScript/msbuild/dumpdb/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="berkeley.db.v120" version="5.3.28.3" targetFramework="native" />
+  <package id="berkeley.db.v120" version="5.3.28.4" targetFramework="Native" />
   <package id="berkeley.db.v140" version="5.3.28.3" targetFramework="native" />
   <package id="mcpp.v120" version="2.7.2.9" targetFramework="native" />
   <package id="mcpp.v140" version="2.7.2.9" targetFramework="native" />
