--- a/java/gradle/freeze.gradle
+++ b/java/gradle/freeze.gradle
@@ -1,11 +1,11 @@
-apply from: "$rootProject.projectDir/../ice/java/gradle/ice.gradle"
-apply from: "$rootProject.projectDir/gradle/db.gradle"
-
+// Ensure iceHome is set prior to loading ice.gradle
 ext.freezeHome = iceHome ? iceHome : new File([rootProject.projectDir, ".."].join(File.separator)).getCanonicalPath()
-
 if(!iceHome) {
     iceHome = new File([rootProject.projectDir, "..", "ice"].join(File.separator)).getCanonicalPath()
 }
+
+apply from: "$rootProject.projectDir/../ice/java/gradle/ice.gradle"
+apply from: "$rootProject.projectDir/gradle/db.gradle"
 
 ext.localIceLibPath = new File([iceHome, "java", "lib"].join(File.separator)).getCanonicalPath()
 
