Java Compat update

--- a/java/demo/Freeze/transform/build.gradle
+++ b/java/demo/Freeze/transform/build.gradle
@@ -5,6 +5,7 @@
 // **********************************************************************
 
 slice {
+    compat = true
     java {
         include = ["${projectDir}"]
         srcDir = '.'
@@ -39,7 +40,7 @@ sourceSets {
 }
 
 dependencies {
-    compile localDependency("ice")
+    compile localDependency("ice-compat")
     compile localDependency("freeze")
     compile files(dbJar)
     if (!useLocalOnly) {
