--- a/java/demo/Freeze/casino/build.gradle
+++ b/java/demo/Freeze/casino/build.gradle
@@ -5,6 +5,7 @@
 // **********************************************************************
 
 slice {
+    compat = true
     java {
         include = ["${projectDir}"]
         srcDir = '.'
@@ -20,7 +21,7 @@ sourceSets {
 }
 
 dependencies {
-    compile localDependency("ice")
+    compile localDependency("ice-compat")
     compile localDependency("freeze")
     if (!useLocalOnly) {
         runtime "org.apache.tools:bzip2:1.0"
