--- a/java/gradle/freeze.gradle
+++ b/java/gradle/freeze.gradle
@@ -7,11 +7,12 @@ if(!iceHome) {
 apply from: "$rootProject.projectDir/../ice/java/gradle/ice.gradle"
 apply from: "$rootProject.projectDir/gradle/db.gradle"
 
-ext.localIceLibPath = new File([iceHome, "java", "lib"].join(File.separator)).getCanonicalPath()
+ext.localIceLibPath = new File([iceHome, "java-compat", "lib"].join(File.separator)).getCanonicalPath()
 
 slice {
     freezeHome = this.freezeHome
     iceHome = this.iceHome
+    compat = true
 }
 
 ext.localDependency = { artifactId ->
