--- a/java/test/build.gradle
+++ b/java/test/build.gradle
@@ -22,7 +22,7 @@ sourceSets {
 }
 
 dependencies {
-    compile localDependency('ice')
+    compile localDependency('ice-compat')
     compile localDependency('freeze')
     compile files(dbJar)
     runtime "org.apache.tools:bzip2:1.0"
