--- a/java/gradle.properties
+++ b/java/gradle.properties
@@ -44,6 +44,11 @@ debug = true
 iceHome =
 
 //
+// Set the version of the Ice Builder to use for building
+//
+iceBuilderVersion = 1.3.13
+
+//
 // Set the location of a local Ice Builder for Gradle source directory
 //
 iceBuilderHome =
