--- a/cpp/msbuild/freeze.cpp.props
+++ b/cpp/msbuild/freeze.cpp.props
@@ -2,16 +2,7 @@
 <Project ToolsVersion="14.0"
          xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-
-    <!-- TODO: add support for building tests and demos against a
-    Ice+Freeze binary distribution -->
-
-    <PropertyGroup>
-        <Ice_BuildingSrc>yes</Ice_BuildingSrc>
-        <Ice_CppMapping>cpp98</Ice_CppMapping>
-    </PropertyGroup>
-
-    <Import Project="$(MSBuildThisFileDirectory)\..\..\ice\cpp\msbuild\ice.cpp.props" />
+    <Import Project="$(MSBuildThisFileDirectory)\..\..\ice\cpp\msbuild\ice.cpp98.props" />
 
     <!-- If we are building the Freeze source distribution or if UseBinDist was not set to
          yes, set FreezeHome to point to this Freeze source distribution -->
