--- a/cpp/src/FreezeScript/msbuild/dumpdb/dumpdb.vcxproj
+++ b/cpp/src/FreezeScript/msbuild/dumpdb/dumpdb.vcxproj
@@ -21,8 +21,9 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{FCD2A68D-540F-4599-A7B0-5086057419EC}</ProjectGuid>
     <Ice_BuildingSrc>yes</Ice_BuildingSrc>
-    <IceBuilderCppProps Condition="!Exists('$(IceBuilderCppProps)')">$([System.IO.Directory]::GetFiles('$(LocalAppData)\Microsoft\VisualStudio\$(VisualStudioVersion)\Extensions', 'IceBuilder.Cpp.props', SearchOption.AllDirectories))</IceBuilderCppProps>
-    <IceBuilderCppTargets Condition="!Exists('$(IceBuilderCppTargets)')">$([System.IO.Directory]::GetFiles('$(LocalAppData)\Microsoft\VisualStudio\$(VisualStudioVersion)\Extensions', 'IceBuilder.Cpp.targets', SearchOption.AllDirectories))</IceBuilderCppTargets>
+    <IceBuilderInstallDir>$([MSBuild]::GetRegistryValue('HKEY_CURRENT_USER\SOFTWARE\ZeroC\IceBuilder', 'InstallDir.$(VisualStudioVersion)'))</IceBuilderInstallDir>
+    <IceBuilderCppProps>$(IceBuilderInstallDir)\Resources\IceBuilder.Cpp.props</IceBuilderCppProps>
+    <IceBuilderCppTargets>$(IceBuilderInstallDir)\Resources\IceBuilder.Cpp.targets</IceBuilderCppTargets>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -75,6 +76,7 @@
     <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Preprocessor.cpp" />
     <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\Scanner.cpp" />
     <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\SliceUtil.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\FileTracker.cpp" />
     <ClCompile Include="..\..\AssignVisitor.cpp" />
     <ClCompile Include="..\..\Data.cpp" />
     <ClCompile Include="..\..\DumpDB.cpp" />
@@ -119,5 +121,11 @@
     <Error Condition="!Exists('..\..\..\..\msbuild\packages\berkeley.db.v120.5.3.28.4\build\native\berkeley.db.v120.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\msbuild\packages\berkeley.db.v120.5.3.28.4\build\native\berkeley.db.v120.targets'))" />
     <Error Condition="!Exists('..\..\..\..\msbuild\packages\mcpp.v120.2.7.2.11\build\native\mcpp.v120.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\msbuild\packages\mcpp.v120.2.7.2.11\build\native\mcpp.v120.targets'))" />
     <Error Condition="!Exists('..\..\..\..\msbuild\packages\mcpp.v140.2.7.2.11\build\native\mcpp.v140.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\msbuild\packages\mcpp.v140.2.7.2.11\build\native\mcpp.v140.targets'))" />
+  </Target>
+  <Target Name="EnsureIceBuilderImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project requires the Ice Builder for Visual Studio extension. Use "Tools &amp;gt; Extensions and Updates" to install it. For more information, see https://visualstudiogallery.msdn.microsoft.com/1a64e701-63f2-4740-8004-290e6c682ce0.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(IceBuilderCppProps)')" Text="$(ErrorText)" />
   </Target>
 </Project>
