Update MCPP version in MSbuild projects

--- a/cpp/src/FreezeScript/msbuild/dumpdb/dumpdb.vcxproj.filters
+++ b/cpp/src/FreezeScript/msbuild/dumpdb/dumpdb.vcxproj.filters
@@ -52,6 +52,7 @@
     <ClCompile Include="..\..\FSGrammar.cpp" />
     <ClCompile Include="..\..\FSParser.cpp" />
     <ClCompile Include="..\..\FSScanner.cpp" />
+    <ClCompile Include="..\..\..\..\..\ice\cpp\src\Slice\FileTracker.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\AssignVisitor.h">
