--- a/cpp/src/Freeze/msbuild/freeze/packages.config
+++ b/cpp/src/Freeze/msbuild/freeze/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="berkeley.db.v120" version="5.3.28.4" targetFramework="Native" />
   <package id="berkeley.db.v140" version="5.3.28.3" targetFramework="native" />
+  <package id="mcpp.v120" version="2.7.2.12" targetFramework="native" />
+  <package id="mcpp.v140" version="2.7.2.12" targetFramework="native" />
 </packages>
