--- a/cpp/msbuild/zeroc.freeze.v120.props
+++ b/cpp/msbuild/zeroc.freeze.v120.props
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (c) 2009-2017 ZeroC, Inc. All rights reserved. -->
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-
-    <PropertyGroup>
-        <Path>$(MSBuildThisFileDirectory)\bin\Win32\Release;%(Path)</Path>
+    <PropertyGroup Condition="'$(MSBuildToolsVersion)' == '12.0'">
+        <FreezeHome>$(MSBuildThisFileDirectory)..\..</FreezeHome>
+        <FreezeToolsPath>$(FreezeHome)\tools</FreezeToolsPath>
     </PropertyGroup>
-
 </Project>
