--- a/java/gradle.properties
+++ b/java/gradle.properties
@@ -4,7 +4,7 @@
 //
 // **********************************************************************
 
-iceVersion = 3.7.0-alpha4
+iceVersion = 3.7.0-beta0
 
 //
 // The directory that contains Oracle Berkeley DB's db.jar file. When not
