--- a/cpp/msbuild/zeroc.freeze.v120.nuspec
+++ b/cpp/msbuild/zeroc.freeze.v120.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>zeroc.freeze.v120</id>
     <title>ZeroC Freeze C++ for Visual Studio 2013</title>
-    <version>3.7.0-alpha4</version>
+    <version>3.7.0-beta0</version>
     <authors>ZeroC, Inc</authors>
     <licenseUrl>https://zeroc.com/licensing</licenseUrl>
     <projectUrl>http://www.zeroc.com</projectUrl>
@@ -13,7 +13,7 @@
     <releaseNotes>https://doc.zeroc.com/display/Ice37/Ice+Release+Notes</releaseNotes>
     <tags>ice native</tags>
     <dependencies>
-      <dependency id="zeroc.ice.v120" version="[3.7.0-alpha4]"/>
+      <dependency id="zeroc.ice.v120" version="[3.7.0-beta0]"/>
     </dependencies>
   </metadata>
 </package>
