--- a/cpp/src/Freeze/Freeze.rc
+++ b/cpp/src/Freeze/Freeze.rc
@@ -23,12 +23,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "ZeroC, Inc.\0"
             VALUE "FileDescription", "Freeze C++ Library\0"
-            VALUE "FileVersion", "3.7a4\0"
+            VALUE "FileVersion", "3.7b0\0"
             VALUE "InternalName", INTERNALNAME
             VALUE "LegalCopyright", "\251 2003-2015 ZeroC, Inc.\0"
             VALUE "OriginalFilename", ORIGINALFILENAME
             VALUE "ProductName", "Freeze\0"
-            VALUE "ProductVersion", "3.7a4\0"
+            VALUE "ProductVersion", "3.7b0\0"
         END
     END
     BLOCK "VarFileInfo"
