--- a/cpp/src/FreezeScript/TransformDB.rc
+++ b/cpp/src/FreezeScript/TransformDB.rc
@@ -19,12 +19,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "ZeroC, Inc.\0"
             VALUE "FileDescription", "Transform Freeze Database\0"
-            VALUE "FileVersion", "3.7a4\0"
+            VALUE "FileVersion", "3.7b0\0"
             VALUE "InternalName", "transformdb\0"
             VALUE "LegalCopyright", "\251 2003-2015 ZeroC, Inc.\0"
             VALUE "OriginalFilename", "transformdb.exe\0"
             VALUE "ProductName", "Freeze\0"
-            VALUE "ProductVersion", "3.7a4\0"
+            VALUE "ProductVersion", "3.7b0\0"
         END
     END
     BLOCK "VarFileInfo"
