--- a/cpp/src/slice2freeze/Slice2Freeze.rc
+++ b/cpp/src/slice2freeze/Slice2Freeze.rc
@@ -19,12 +19,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "ZeroC, Inc.\0"
             VALUE "FileDescription", "Slice to Freeze for C++ Translator\0"
-            VALUE "FileVersion", "3.7a4\0"
+            VALUE "FileVersion", "3.7b0\0"
             VALUE "InternalName", "slice2freeze\0"
             VALUE "LegalCopyright", "\251 2003-2015 ZeroC, Inc.\0"
             VALUE "OriginalFilename", "slice2freeze.exe\0"
             VALUE "ProductName", "Freeze\0"
-            VALUE "ProductVersion", "3.7a4\0"
+            VALUE "ProductVersion", "3.7b0\0"
         END
     END
     BLOCK "VarFileInfo"
