--- a/java/gradle.properties
+++ b/java/gradle.properties
@@ -4,7 +4,15 @@
 //
 // **********************************************************************
 
+//
+// Version used in JAR files
+//
 iceVersion = 3.7.0-beta0
+
+//
+// Prefix version
+//
+prefixVersion = 3.7b0
 
 //
 // The directory that contains Oracle Berkeley DB's db.jar file. When not
@@ -12,20 +20,19 @@ iceVersion = 3.7.0-beta0
 // directories based on iceVersion.
 // On Windows, use / as directory separator for this path, for example:
 // dbHome = C:/Program Files (x86)/Oracle/Berkeley DB 11gR2 5.3.28/jar
-
 dbHome =
 
 //
 // Select an installation base directory. The directory will be created
 // if it does not exist. If this property is not set the default will be
 // used. Default values are:
-//   - Windows: %SystemDrive%\Ice-${iceVersion}
-//   - Non Windows /opt/Ice-${iceVersion}
+//   - Windows: %SystemDrive%\Ice-${prefixVersion}
+//   - Non Windows /opt/Ice-${prefixVersion}
 //
 prefix =
 
 //
-// Set to true if you want to add Class-Path entries to Ice JAR files
+// Set to true if you want to add Class-Path entries to Freeze JAR files
 // when installing the JARs. That is mostly usefull when building JAR
 // files to be used in system packages.
 //
@@ -46,7 +53,7 @@ iceHome =
 //
 // Set the version of the Ice Builder to use for building
 //
-iceBuilderVersion = 1.3.17
+iceBuilderVersion = 1.4.0
 
 //
 // Set the location of a local Ice Builder for Gradle source directory
